k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vertere
  namespace: production
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - vertere.sebas1012.site
      secretName: cloudflare-origin-cert
  rules:
    - host: vertere.sebas1012.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vertere-web
                port:
                  number: 80
